--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <ul><a href="contact.html">Contact us</a></ul>
     </li>
   </nav>
+  <--form--/>
   <div class="container">
     <center>
       <h2>Thank You For choosing us</h2>
