--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
+  <!-- nav -->
   <nav>
+    <!-- list -->
     <li>
       <ul><a href="index.html">Home</a></ul>
       <ul><a href="about.html">About us</a></ul>
@@ -18,7 +20,7 @@
       <ul><a href="contact.html">Contact us</a></ul>
     </li>
   </nav>
-  <--form--/>
+ <!-- forms -->
   <div class="container">
     <center>
       <h2>Thank You For choosing us</h2>
@@ -34,9 +36,3 @@
                       <input type="Password" id="Password" name="Password" placeholder=""><br><br>
                       <center><button type="submit">LOGIN</center><br>
                       <a href="index.html">Don't Have An Account Yet || Sign Up</a>
-
-            </form>
-  </div>
-</body>
-
-</html>
